# test-uv

./: hello.py  pyproject.toml
