[project]
name = "test-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.2",
    "fjformer==0.0.91",
    "flax>=0.10.2",
    "jax[tpu]>=0.5.0",
    "jinja2==3.1.5",
    "optax",
    "prometheus-client==0.21.0",
    "termcolor>=2.5.0",
    "tqdm",
    "transformers[flax]",
    "uvicorn==0.32.0",
    "uvloop==0.21.0",
    "wandb==0.18.5",
]
